# dive-mcp-host

./: .customrules  .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  alembic.ini  command_alias.json  config.example.json  dive_httpd.json  mcp_config.json  model_config.json  pyproject.toml  serviceConfig.json
.github/workflows/: ci.yml
dive_mcp/cli/: __init__.py  cli.py
dive_mcp/host/: agent.py  agent_factory.py  conversation.py  errors.py  host.py  prompt.py
dive_mcp/host/agents/: __init__.py  agent_factory.py  chat_agent.py
dive_mcp/host/conf/: __init__.py
dive_mcp/host/helpers/: checkpointer.py
dive_mcp/host/store/: sqlite.py
dive_mcp/host/tools/: __init__.py
dive_mcp/httpd/: __init__.py  app.py
dive_mcp/httpd/database/: __init__.py  database.py  sqlite.py
dive_mcp/httpd/middlewares/: __init__.py
dive_mcp/httpd/routers/: chat.py  config.py  model_verify.py  models.py  openai.py  tools.py
dive_mcp/httpd/store/: local.py  store.py
dive_mcp/httpd/tests/: test_app.py
dive_mcp/models/: __init__.py  fake.py
dive_mcp_host/cli/: README.md  __init__.py  cli.py  cli_types.py  migrate.py
dive_mcp_host/host/: chat.py  conversation.py  errors.py  host.py  prompt.py
dive_mcp_host/host/agents/: __init__.py  agent_factory.py  chat_agent.py  tool_call.py  tools_in_prompt.py
dive_mcp_host/host/conf/: __init__.py  llm.py
dive_mcp_host/host/helpers/: __init__.py  checkpointer.py  context.py
dive_mcp_host/host/store/: sqlite.py
dive_mcp_host/host/tools/: __init__.py  echo.py  log.py  mcp_server.py  misc.py  model_types.py  stdio_server.py
dive_mcp_host/httpd/: __init__.py  _main.py  abort_controller.py  app.py  app_load.py  dependencies.py  rate_limiter.py  server.py
dive_mcp_host/httpd/conf/: arguments.py  command_alias.py  envs.py  httpd_service.py  mcp_servers.py  misc.py  models.py  prompt.py  system_prompt.py
dive_mcp_host/httpd/conf/command_alias/: manager.py
dive_mcp_host/httpd/conf/mcpserver/: __init__.py  manager.py
dive_mcp_host/httpd/conf/model/: manager.py
dive_mcp_host/httpd/conf/model_config/: manager.py
dive_mcp_host/httpd/conf/prompts/: manager.py  system.py
dive_mcp_host/httpd/conf/service/: manager.py
dive_mcp_host/httpd/database/: __init__.py  database.py  message_store.py  message_store_abc.py  migrate.py  models.py  orm_models.py  sqlite.py
dive_mcp_host/httpd/database/migrations/: env.py
dive_mcp_host/httpd/database/migrations/versions/: 202503121414_init.py  202503121758_store_user_id_and_resource_usage.py  202503131608_resource_usage_fk.py  202503131619_add_index.py  202503131734_auto_increment_msg_id.py  202503131803_auto_increment_resource_id.py  (+7 more)
dive_mcp_host/httpd/database/msg_store/: abstract.py  base.py  postgresql.py  sqlite.py
dive_mcp_host/httpd/middlewares/: __init__.py  error_handle.py  general.py  kwargs.py
dive_mcp_host/httpd/prompts/: manager.py
dive_mcp_host/httpd/routers/: __init__.py  chat.py  config.py  model_verify.py  models.py  openai.py  tools.py  utils.py
dive_mcp_host/httpd/store/: cache.py  local.py  store.py
dive_mcp_host/mcpServer/: __init__.py  index.py
dive_mcp_host/models/: __init__.py  fake.py
doc/: dive_httpd.md
scripts/: run_pg.sh
tests/: conftest.py  helper.py  test_base_message_store_postgresql.py  test_base_message_store_sqlite.py  test_chat_agent.py  test_context_protocol.py  test_db_migration.py  test_fake_model.py  test_get_checkpointer.py  test_helper.py  test_host.py  test_local_file_store.py  test_log.py  test_models.py  test_providers.py  test_tool_in_prompt.py  test_tools.py
tests/httpd/: __init__.py  test_args.py  test_chat_processor.py  test_mcpserver_manager.py  test_model_manager.py  test_prompt_manager.py  test_prompt_system.py  test_service_manager.py
tests/httpd/routers/: conftest.py  test_chat.py  test_config.py  test_model_verify.py  test_openai.py  test_tools.py
